--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,13 @@ body {
     width: 76vw !important;
   } 
 }
+
+/* =================== manage jr admin */
+
+.rotate-0 {
+  transform: rotate(0deg);
+}
+
+.rotate-180 {
+  transform: rotate(180deg);
+}
