--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --border-color: rgba(165, 165, 165, 0.329);
   --main-text-color: #00004b;
   --main-bg-color: #ebeeff;
+  --main-bg-color-blur: #ebeeff9a;
   --main-dark-color: #00004b;
   --action-small-btn: #8798FF;
 }
